Hecho hasta el punto 11, pero no pinta bien las casillas :(

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -2,9 +2,12 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>Hundir la flota</title>
 </head>
 <body>
-
+	<h1>Hundir la flota</h1>
+	<form method="GET" action="HundirFlotaServlet">
+		Pulsa este botón para empezar una emocionante partida de: <input type="submit" value="Hundir la flota">
+	</form> 
 </body>
 </html>
